--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
 
 main {
   font-family: 'Yantramanav', sans-serif;
+  background:#212121;
 }
 #hero {
-  background-image: url(hero.jpg);
+  background-image: url(../src/img/hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -37,10 +38,10 @@ main {
 }
 
 .about {
-  background:#212121;
+
   color:#fff;
   min-height: 100vh;
-  background-image: url(about.jpg);
+  background-image: url(../src/img/about.jpg);
   background-position: right;
   background-size: 55%;
   background-repeat: no-repeat;
@@ -48,11 +49,15 @@ main {
 .about p {
   font-size: 1.3rem;
   margin-bottom:3vh;
-  width:80%;
+  width:70%;
+}
+
+#menu {
+  background-image: url(../src/img/drinks.jpg);
 }
 
 #text {
-  width:30%;
+  width:33%;
   padding:25vh 0 15vh 14%;
 }
 .about .uppercase {
@@ -77,7 +82,7 @@ button{
 
 #jazz {
   background:#BB7043;
-  min-height: 100vh;
+  min-height: 90vh;
   color: #212121;
 }
 
@@ -90,6 +95,7 @@ button{
 
 #entertainment {
   width:30%;
+  margin-bottom: 10vh;
 }
 
 #entertainment .date {
@@ -109,7 +115,7 @@ margin-top:1vh;
 
 
 .image {
-  background-image: url(JazzJive.jpg);
+  /* background-image: url(JazzJive.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -127,10 +133,78 @@ margin-top:1vh;
   width:50%;
 }
 
-
-
 #cards {
   display:flex;
   justify-content: center;
 }
 
+
+#instacard {
+  width:50%;
+  text-align: center;
+  border: 0.1px solid grey;
+  color:white;
+  padding-bottom: 5vh;
+}
+
+
+#instacard .comments{
+font-size: 2rem;
+margin: 4vh 5%;
+}
+
+#instagram {
+  display:flex;
+}
+
+#instagram div {
+  margin-top:3vh;
+  display:flex;
+  justify-content: flex-end;
+  margin-right:3%;
+}
+
+#logo {
+  width: 30px;
+}
+
+.author {
+text-transform: uppercase;
+font-weight: 300;
+}
+
+nav {
+  padding: 5vh 10%;
+  display:grid;
+  grid-template-columns: 3fr 1fr 2fr;
+  text-transform: uppercase;
+  color: white;
+}
+
+nav h3 {
+  color:#BB7043;
+  margin-bottom:1vh;
+  font-weight: 400;
+}
+
+.operationHours {
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+}
+
+footer {
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+  border: 0.1px solid grey;
+  padding-top:5vh;
+}
+
+
+footer div img {
+padding: 1rem;
+}
+
+#bathtub {
+  margin-right:30%;
+}
